--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "vue": "^3.2.31",
+        "vue-loader": "^16.8.3",
+        "vue-template-compiler": "^2.6.14"
     }
 }
